--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "ngx-pipes": "^2.7.3",
     "rxjs": "~6.5.5",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "angular-tslint-rules": "1.20.4",
+    "codelyzer": "5.2.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.8",
