--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,11 @@
     ],
     "lib": [
       "es2017",
-      "dom"
+      "dom",
+      "ES2018.Regexp"
     ]
+  },
+  "angularCompilerOptions": {
+    "strictTemplates": true
   }
 }
