--- a/angular.json
+++ b/angular.json
@@ -61,18 +61,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "NewTab:build"
+            "buildTarget": "NewTab:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "NewTab:build:production"
+              "buildTarget": "NewTab:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "NewTab:build"
+            "buildTarget": "NewTab:build"
           }
         },
         "test": {
@@ -113,5 +113,7 @@
       }
     }
   },
-  "defaultProject": "NewTab"
+  "cli": {
+    "analytics": false
+  }
 }
